public/css/style.css
/* ... */
.cy {
	clear: both ;
}

.controls {
	clear: both ;
}

.graph {
	clear: both ;
}

#current-sentence {
	text-align: right;
}

/** fix button height **/
.input-group > .input-group-btn > .btn, .input-group-btn:last-child > .dropdown-toggle {
  height: 38px;
}

.nav-tabs {
	margin-bottom: -1px;
	margin-top: auto;
}

.tabContainer {
	z-index: +1;
}

.ui-selfcomplete {
       background-color: white;
       width: 150px;
       list-style-type: none;
       padding-left: 3px;
       padding-right: 3px;
}

.ui-menu-item a:hover {
	cursor: pointer ;
}

/* for the future */
.ui-menu-item:has(> .ui-state-hover) {
	background-color: #ddd ;
}
/* for now */
.ui-menu-item .ui-state-hover {
	background-color: #ddd ;
}
.ui-menu-item:hover {
	background-color: #ddd ;
}



/* End JNW additions for tabs */

.treebankLabel {
    margin: 3px;
    padding-top: 2px;
    padding-right: 4px;
    padding-bottom: 2px;
    padding-left: 4px;
font-weight: 600;
border-top-left-radius: 2px;
border-top-right-radius: 2px;
border-bottom-right-radius: 2px;
border-bottom-left-radius: 2px;
background-color: #bf8cf2;
box-shadow: inset 0 -1px 0 rgba(27,31,35,0.12);
}

textarea {
	border-color: #ddd;
}

.selfcomplete-suggestions {
border: 1px solid #999;
background: #FFF;
cursor: default;
overflow: auto;
}
.selfcomplete-suggestion {
padding: 2px 5px;
white-space: nowrap;
overflow: hidden;
}
.selfcomplete-selected {
background: #F0F0F0;
}
.selfcomplete-suggestions strong {
font-weight: normal;
color: #3399FF;
}

th i {
	position: absolute ;
	right: 1px;
	bottom: 1ex;
	padding-left: 0.5ex;
}

.thead-default th {
	position: relative ;
	cursor: pointer ;
	border-right: 1px solid white ;
	border-left: 1px solid white ;
	border-spacing: 1px;
}

.thead-default th:first-child {
	border-left: 1px solid #e9ecef !important ;
}
.thead-default th:last-child {
	border-right: 1px solid #e9ecef !important ;
}

#progressContainer {
    position: fixed;
    left: 0px;
    bottom: 0px;
    height: 4px;
    width: 100%;
}

#progressBar {
    width: 0%;
    border-radius: 5px;
    height: 100%;
    background-color: #157EFB;
}

#welcome-content {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  text-align: center;
  align-items: center;
}

#welcome-content > * {
  margin: 1em 0 0;
}

#welcome-content #filename {

}

#welcome-content #links > * {
  margin: 0 1em;
}

#errorUploadFileSize {
  color: #ff0000;
  display: none;
}

#supportedFormats {
  float: left;
}

#treeLabels {
  float: right;
}

.input-group {
  padding-right: 1em;
}

.btn-group {
  float: left;
  padding-right: 1em;
}

#data-container > div {
  overflow: auto;
  resize: both;
}

#table-data {
  width: 100%;
  display: none;
}

.controls > .graph-btn-group {
  float: right;
}

#tabBox {
  padding-right: 1em;
}

#btnExportLaTeX, #btnExportPNG, #btnExportSVG {
  width: 100px;
}

#exportedGraph, #errorExportLaTeX, #exportedLaTeX {
  display: none;
}

#exportedSVG {
  width: 100%;
  border: 1px solid gray;
  border-radius: 5px;
}

tr.comment, tr.wrong-shape {
  display: none;
}

th.column-hidden {
  color: #888;
}

td .parse-error {
  color: #f00;
}

#top-buttons-container.extra-space {
  margin-bottom: 1ex;
}

.readonly:after {
  content: " (readonly)"
}

#label-container {
  background-color: #fff;
  display: flex;
  padding: 0;
}

#labels-horiz {
  list-style: none;
  margin: 0 0.5em;
  padding: 0;
  display: flex;
}

#label-controller .label-text {
  padding: 0 1em;
}

li.label {
  display: inline;
}

li.label.filtering .label-text {
  border-color: #444;
  -moz-box-shadow: 5px #999999;
  -webkit-box-shadow: 5px #999999;
  box-shadow: 0 0 5px 5px #999999;
}

li.label.not-in-comments .label-text, li.label .label-text.disabled {
  opacity: 0.3;
}

li.label.control .label-text {
  border-color: #868e96;
}

li.label .label-text.disabled {
  cursor: default;
}

li.label .label-text  {
  display: inline-block;
  margin: 0.2em 0.5em;
  font-weight: 600;
  padding: 0.25em 1em;
  border: 2px solid #eee;
  border-radius: 5px;
}

li.label .label-hidden, #dropdown-container .menu-hidden {

  display: none;
  flex-flow: column;

  position: absolute;
  background-color: #eee;
  min-width: 160px;

  padding: 12px 16px;
  z-index: 1;
  border: 3px solid #333;
  border-radius: 3px;

}

li.label:hover .label-hidden {
  display: flex;
  z-index: 2;
}

li.label .label-hidden-group {
  display: flex;
  flex-flow: column;
  justify-content: space-around;
}

li.label .label-hidden-item {
  display: flex;
  flex-flow: column;
  width: 100%;
}

li.label .label-hidden-item-inner {
  display: flex;
  justify-content: center;
  width: 100%;
}

li.label .checkbox-label {
  width: 10ch;
}

li.label .hex-color-group {
  margin-right: 0.5em;
}

li.label .refresh-color {
  font-size: 0.8rem;
}

li.label .delete-button {
  background-color: #b22;
}

li.label .btn {
  border: 0;
}

li.label .btn:hover {
  cursor: pointer;
}

li.label hr {
  margin: 1.5em;
}

li.label input[type="checkbox"] {
  margin: 0 0.5em;
  cursor: pointer;
}

li.label input[name="label-color"] {
  width: 8ch;
}

#label-clear-filter {
  cursor: pointer;
}

.dropdown-toggle.open::after {
  transform: rotate(180deg);
}

#dropdown-container .menu-show {
  position: absolute;
  top: 38px;
  z-index: 10;
  background-color: #eee;
  width: 19em; /* enough to cover the pan-sentences buttons */
  background-color: #eee;
  padding: 12px 16px;
  border: 3px solid #333;
  border-radius: 3px;
}

.dropdown-content ul {
  list-style: none;
  margin: 0 0.5em;
  padding: 0;
  display: flex;
  flex-flow: column nowrap;
}

.dropdown-content hr {
  margin: 1.5em;
}

li.dropdown-group {
  display: flex;
  flex-flow: column nowrap;
}

span.dropdown-group-title {
  font-weight: 600;
}

a.dropdown-group-item {
  color: #212529;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-left: 1ch;
}

a.dropdown-group-item:hover {
  text-decoration: none;
}
/* ... */

